# Django-Projects

./: README.md
Basic1/: README.md
Basic1/core/: settings.py  urls.py
Basic1/users/: admin.py  serializers.py  views.py
Basic2/: README.md
Basic2/core/: urls.py
Basic2/templates/: base.html  navbar.html
Basic2/users/: views.py
Basic3/: README.md  pyproject.toml
Basic3/core/: settings.py
Basic3/templates/: home.html
Basic3/users/: views.py
CRM/: README.md  pyproject.toml
CRM/core/: settings.py  urls.py
CRM/customerdata/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
Expenses/: README.md  pyproject.toml
Expenses/core/: urls.py
Expenses/expenses/: serializers.py  urls.py
Github-Data-Mining/: README.md
Github-Data-Mining/config/: settings.py
Github-Data-Mining/projects/: serializers.py  tests.py
Github-Data-Mining/templates/: base.html  repository_detail.html  repository_list.html
Hotel/: README.md  pyproject.toml
Hotel/core/: settings.py
Hotel/hotel/: forms.py  views.py
Lms/: README.md
Order/: README.md
PIXBlog/: README.md
Photo/: README.md  pyproject.toml
SocialMedia/: README.md  pyproject.toml
SocialMedia/core/: settings.py  urls.py
SocialMedia/media/post_images/: Ming_Lan.avif  general.avif
SocialMedia/templates/: index.html  profile.html  search.html  setting.html  signin.html  signup.html
SocialMedia/users/: admin.py  views.py
SocialMedia/users/migrations/: 0001_initial.py
Store/: README.md  pyproject.toml
django-projects-2024/: README.md
django-projects-2025/: README.md
(+285 files in other folders)
