[tool.poetry]
name = "django-project-MateSpace"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-ckeditor = "^6.7.1"
django-cors-headers = "^4.4.0"
pillow = "^10.4.0"
django-filter = "^24.3"
asgiref = "^3.8.1"
django-bootstrap-modal-forms = "^3.0.4"
django-bootstrap3 = "^24.3"
django-forms-bootstrap = "^3.1.0"
django-widget-tweaks = "^1.5.0"
pytz = "^2024.2"
sqlparse = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
